# Store-Service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  database.py  exceptions.py  logging_config.py  main.py  metrics.py  tracing.py
app/models/: orm.py
app/repositories/: order_repo.py  product_repo.py
app/routers/: health.py  orders.py  products.py
app/schemas/: generated.py
app/services/: order_service.py  product_service.py
monitoring/: Store Service Dashboard.json  prometheus.yml  promtail-config.yml  tempo.yml
monitoring/provisioning/dashboards/: dashboards.yml
monitoring/provisioning/datasources/: loki.yml  tempo.yml
openapi/: spec.yaml
tests/: conftest.py  test_health.py  test_orders.py  test_products.py
