[project]
name = "isrpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "datamodel-code-generator>=0.56.1",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-sdk>=1.24.0",
    "prometheus-client>=0.25.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]
